--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ padding-left: 200px;
 color:white;
 }
 
+
+
 h1{
 font-size: 100px;
 text-align: center;
@@ -180,4 +182,44 @@ padding-right: 15px;
 
 .footercontainer .row{
 text-align: center;
+}
+
+
+/* CASES HTML */
+.containerb{
+  width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
+  
+  }
+
+.containerb h5{
+ font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.containerb p{
+  text-align: center;
+}
+.containerb i{
+  padding-left: 40px;
+}
+table{
+  font-size: 13px;
+}
+th{
+  color: rgb(58, 58, 58);
+
+}
+
+
+.dead{
+  color: red;
+}
+.recovered{
+  color: green;
+}
+.admitted{
+  color: blue;
 }
