--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ width: 1024px;
 margin-left: auto;
 margin-right: auto;
 
+
 }
 header{
   margin-bottom: 15px;
@@ -19,11 +20,6 @@ margin-right: auto;
 }
 body{
 text-align: center;
-}
-
-nav{
-background-color: rgb(149, 32, 32);
-
 }
 
 nav form{
@@ -156,19 +152,9 @@ margin-bottom: 70px;
 
 }
 .featurette-dividerb{
-
 margin-top: 70px;
 }
 
-.row3 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
 
 footer{
 margin-top: 10px;
@@ -185,4 +171,25 @@ text-align: center;
 }
 
 
+.swiper-container-3d {
+  perspective: 1200px;
+}
 
+.swiper-container {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  z-index: 1;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.img1{
+  margin-top: 60px;
+}
